src/test/resources/de/cd4analysis/cocos/mcg2ebnf/valid/CD4AC3002.cd
package de.cd4analysis.cocos;

classdiagram CD4AC3002 {
	class A {
		String a;
	}
}