src/test/resources/de/cd4analysis/cocos/mcg2ebnf/invalid/CD4AC3007.cd
package de.cd4analysis.cocos;

classdiagram CD4AC3007 {
	interface A {
		public void m();
	}
	interface B {
		public void m(String a);
		public String m2(String a, int b);
	}

}